icon overflow fix

--- a/frontend/src/app/todo-root/todo-root.component.scss
+++ b/frontend/src/app/todo-root/todo-root.component.scss
@@ -57,6 +57,7 @@
     width: 100%;
     display: flex;
     flex-flow: column;
+    overflow-x: auto;
   }
 
   .seperator {
